<resources>
    <string name="app_name" translatable="false">Ping</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pingLogo">Logo Ping</string>
    <string name="usernameText">Username or Email</string>
    <string name="label" translatable="false">Ping</string>
    <string name="title_activity_splash">Starting Ping</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="ui_activity_authenticating">Please wait...</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account_preferences_title">Ping</string>
    <string name="wrong_credentials">Email or password is wrong</string>
    <string name="connection_error">Cannot connect to the server, check your Internet connection</string>
    <string name="general_error">Generic error:</string>
    <string name="account_picker_dialog_title">Choose an account</string>
</resources>
